update conteudo html

--- a/index.html
+++ b/index.html
@@ -68,12 +68,12 @@
     <!-- Seção sobre -->
     <div id="sobre">
         <h2>Sobre</h2> <!-- Título da seção -->
-        <p>Essa página foi criada para apresentar os integrantes do grupo e suas respectivas tarefas. O objetivo é mostrar a colaboração de cada membro na realização do trabalho. Para isso foi utilizado na Lista 1 o Portugol WebStudio e na Lista 2 o HTML e CSS.</p>
+        <p>Essa página foi criada para apresentar a criadora do trabalho e suas respectivas tarefas. Para isso foi utilizado na Lista 1 o Portugol WebStudio e na Lista 2 o HTML e CSS.</p>
     </div>
 
     <!-- Rodapé da página -->
     <footer>
-        <p>Desenvolvedores: Jenifer Carvalho Marques</p> <!-- Nome do desenvolvedor -->
+        <p>Desenvolvedora: Jenifer Carvalho Marques</p> <!-- Nome do desenvolvedor -->
         <p>Data: 09/04/2025</p> <!-- Data de criação -->
         <p>Versão: 1.0</p> <!-- Versão da página -->
     </footer>
